# final-project-llfrankel

./: README.md  hask-weft-analyze  json-specs.md  proposal.txt  weft-analysis.cabal  weft-diff.py  weft-export  weft-export-2
app/: Main.hs
diff/: Main.hs
docs/: acknowledge.txt  contact.txt  json-specs.md  progress-mar-2.txt  progress.txt  proposal.txt  report.txt  submission.txt  weft.txt
examples/: bars.weft  bars2.weft  test1.weft  test2.weft
src/: Annotate.hs  DepGraph.hs  IR.hs  IRHelpers.hs  Output.hs  Partition.hs
test/: AnnotateMonoidTest.hs  AnnotateTest.hs  DepGraphTest.hs  Main.hs  PartitionTest.hs
