cabal-version: 2.4
name:          weft-analysis
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules:
    IR
    Annotate
    DepGraph
    IRHelpers
    Partition
    Output
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base       >= 4.14 && < 5
    , aeson      >= 2.0
    , bytestring
    , containers
    , text
    , mtl

executable weft-analysis
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
      , base
      , weft-analysis
      , aeson
      , bytestring
      , containers

executable weft-diff
      main-is:          Main.hs
      hs-source-dirs:   diff
      default-language: Haskell2010
      build-depends:
        , base
        , aeson
        , bytestring
        , containers
        , text
        , vector

test-suite weft-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      DepGraphTest
      PartitionTest
      AnnotateTest
      AnnotateMonoidTest
      Generators
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
      , base
      , weft-analysis
      , QuickCheck
      , containers
